--- a/flask-lessons/trello-clone/.flaskenv.sample
+++ b/flask-lessons/trello-clone/.flaskenv.sample
@@ -1,3 +1,4 @@
 FLASK_RUN_PORT= # Flask server port
 FLASK_DEBUG= # Set true for debug mode 
 JWT_KEY= # JWT signing key
+DB_URI= # Database connection URI
